Fix Bug 283108 - Messages without In-Reply-To: header are not properly sorted in thread view

The first reference is the first message of thread and second is the parent of message.
FIXED-IN: 4.8
BUG: 283108